test/log/scons25.out
scons: Reading SConscript files ...
v0.1-530-g1b6b1fa0
scons: done reading SConscript files.
scons: Building targets ...
g++-11 -o CommandStack.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql CommandStack.cpp
g++-11 -o DC.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -DVERSION=\"v0.1-530-g1b6b1fa0\" "-DBUILD_TIME=\"2022-03-02 18:57:47\"" -Iinclude DC.cpp
g++-11 -o Leaderboard.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Leaderboard.cpp
g++-11 -o MobActivity.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql MobActivity.cpp
g++-11 -o Timer.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Timer.cpp
g++-11 -o Trace.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql Trace.cpp
g++-11 -o act.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act.cpp
g++-11 -o act_comm.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act_comm.cpp
g++-11 -o act_info.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql act_info.cpp
g++-11 -o alias.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql alias.cpp
g++-11 -o arena.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql arena.cpp
g++-11 -o assign_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql assign_proc.cpp
g++-11 -o auction.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql auction.cpp
g++-11 -o ban.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql ban.cpp
g++-11 -o board.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql board.cpp
g++-11 -o casino.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql casino.cpp
g++-11 -o channel.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql channel.cpp
g++-11 -o cl_barbarian.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_barbarian.cpp
g++-11 -o cl_mage.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_mage.cpp
g++-11 -o cl_monk.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_monk.cpp
g++-11 -o cl_paladin.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_paladin.cpp
g++-11 -o cl_ranger.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_ranger.cpp
g++-11 -o cl_thief.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_thief.cpp
g++-11 -o cl_warrior.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql cl_warrior.cpp
g++-11 -o clan.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql clan.cpp
g++-11 -o class.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql class.cpp
g++-11 -o combinables.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql combinables.cpp
g++-11 -o comm.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql comm.cpp
g++-11 -o const.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql const.cpp
g++-11 -o corpse.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql corpse.cpp
g++-11 -o db.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql db.cpp
g++-11 -o dcastle.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude dcastle.cpp
g++-11 -o guild.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql guild.cpp
g++-11 -o ki.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql ki.cpp
g++-11 -o fount.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql fount.cpp
g++-11 -o help.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql help.cpp
g++-11 -o golem.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql golem.cpp
g++-11 -o info.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql info.cpp
g++-11 -o innate.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql innate.cpp
g++-11 -o inventory.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql inventory.cpp
g++-11 -o handler.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql handler.cpp
g++-11 -o group.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql group.cpp
g++-11 -o limits.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql limits.cpp
g++-11 -o fight.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql fight.cpp
g++-11 -o game_portal.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql game_portal.cpp
g++-11 -o interp.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql interp.cpp
g++-11 -o non_off.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql non_off.cpp
g++-11 -o offense.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql offense.cpp
g++-11 -o nlog.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql nlog.cpp
g++-11 -o objects.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql objects.cpp
g++-11 -o news.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql news.cpp
g++-11 -o new_edit.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql new_edit.cpp
g++-11 -o quest.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql quest.cpp
g++-11 -o nanny.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql nanny.cpp
g++-11 -o obj_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql obj_proc.cpp
g++-11 -o wiz_102.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_102.cpp
g++-11 -o wiz_104.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_104.cpp
g++-11 -o who.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql who.cpp
g++-11 -o wiz_108.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_108.cpp
g++-11 -o wiz_103.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_103.cpp
g++-11 -o token.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql token.cpp
g++-11 -o wiz_106.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_106.cpp
g++-11 -o vault.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql vault.cpp
g++-11 -o wiz_107.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_107.cpp
g++-11 -o wiz_109.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_109.cpp
g++-11 -o wizard.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wizard.cpp
g++-11 -o wiz_110.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_110.cpp
g++-11 -o wiz_101.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_101.cpp
g++-11 -o wiz_105.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql wiz_105.cpp
g++-11 -o weather.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql weather.cpp
g++-11 -o utility.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql utility.cpp
g++-11 -o modify.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql modify.cpp
g++-11 -o mob_prog.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_prog.cpp
g++-11 -o mob_act.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_act.cpp
g++-11 -o mob_proc.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_proc.cpp
g++-11 -o mob_proc2.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_proc2.cpp
g++-11 -o move.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql move.cpp
g++-11 -o mob_commands.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql mob_commands.cpp
g++-11 -o magic.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql magic.cpp
g++-11 -o memory.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql memory.cpp
g++-11 -o meta.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql meta.cpp
g++-11 -o save.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql save.cpp
g++-11 -o shop.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql shop.cpp
g++-11 -o sing.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql sing.cpp
g++-11 -o social.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql social.cpp
g++-11 -o spec.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql spec.cpp
g++-11 -o spells.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql spells.cpp
g++-11 -o stat.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude -I/usr/include/pgsql stat.cpp
g++-11 -o showplayerxp.o -c -ggdb3 -m32 -std=gnu++23 -Wno-write-strings -O3 -DLINUX -Iinclude showplayerxp.cpp
save.cpp: In function 'void save_char_obj(CHAR_DATA*)':
save.cpp:823:18: error: 'dc_fopen' was not declared in this scope; did you mean 'fopen'?
  823 |   if (!(fpsave = dc_fopen(strsave, "wb"))) {
      |                  ^~~~~~~~
      |                  fopen
save.cpp:859:7: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  859 |       dc_fclose(fpsave);
      |       ^~~~~~~~~
      |       fclose
save.cpp:866:7: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  866 |       dc_fclose(fpsave);
      |       ^~~~~~~~~
      |       fclose
save.cpp: In function 'void load_char_obj_error(FILE*, char*)':
save.cpp:886:5: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  886 |     dc_fclose(fpsave);
      |     ^~~~~~~~~
      |     fclose
save.cpp: In function 'bool load_char_obj(descriptor_data*, char*)':
save.cpp:931:17: error: 'dc_fopen' was not declared in this scope; did you mean 'fopen'?
  931 |   if ((fpsave = dc_fopen(strsave, "rb" )) == NULL)
      |                 ^~~~~~~~
      |                 fopen
save.cpp:960:5: error: 'dc_fclose' was not declared in this scope; did you mean 'fclose'?
  960 |     dc_fclose(fpsave);
      |     ^~~~~~~~~
      |     fclose
scons: *** [save.o] Error 1
scons: building terminated because of errors.
